# hacobot

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json
chaos/experiments/: network-chaos-robot-cloud.yaml  pod-chaos-kafka.yaml  stress-chaos-node.yaml
chaos/test_scenarios/: verify_failsafe_during_chaos.py
dashboard/grafana-dashboards/: hacobot_health.json
demos/: 01_build_test.sh  02_launch_stack.sh  03_break_and_verify_failsafe.sh  04_observability.sh  05_chaos_experiment.sh  06_soak_test.sh  07_real_kafka_estop.sh  README.md  run_all.sh
demos/lib/: common.sh
docs/: architecture-diagram.drawio  aws-production-architecture.drawio  verification_guide.md
edge/docker/: Dockerfile  docker-compose.yml
edge/docker/grafana/provisioning/dashboards/: dashboards.yml
edge/docker/grafana/provisioning/datasources/: prometheus.yml
edge/docker/prometheus/: prometheus.yml
edge/ros2_ws/src/nav2_bringup_custom/: CMakeLists.txt  README.md  package.xml
edge/ros2_ws/src/nav2_bringup_custom/launch/: gazebo_sim.launch.py  nav2_bringup.launch.py
edge/ros2_ws/src/nav2_bringup_custom/params/: nav2_params.yaml
edge/ros2_ws/src/nav2_bringup_custom/rviz/: hacobot_view.rviz
edge/ros2_ws/src/nav2_bringup_custom/scripts/: activate_slam_toolbox.py
edge/ros2_ws/src/objects/create_world/: CMakeLists.txt  package.xml
edge/ros2_ws/src/objects/create_world/launch/: create_world.launch.py
edge/ros2_ws/src/objects/create_world/scripts/: world_supervisor.py
edge/ros2_ws/src/objects/spawn_robot/: CMakeLists.txt  package.xml
edge/ros2_ws/src/objects/spawn_robot/launch/: spawn_robot.launch.py
edge/ros2_ws/src/objects/spawn_robot/scripts/: delete_entity_safely.py  entity_reaper.py  initial_map_seeder.py
edge/ros2_ws/src/remote_control/estop_bridge/: CMakeLists.txt  package.xml
edge/ros2_ws/src/remote_control/estop_bridge/include/estop_bridge/: estop_bridge_node.hpp
edge/ros2_ws/src/remote_control/estop_bridge/launch/: estop_bridge.launch.py
edge/ros2_ws/src/remote_control/estop_bridge/src/: estop_bridge_node.cpp  main.cpp
edge/ros2_ws/src/remote_control/estop_bridge/test/: test_estop_bridge.cpp
edge/ros2_ws/src/safety/heartbeat_monitor/: CMakeLists.txt  package.xml
edge/ros2_ws/src/safety/heartbeat_monitor/include/heartbeat_monitor/: heartbeat_monitor_node.hpp
edge/ros2_ws/src/safety/heartbeat_monitor/launch/: heartbeat_monitor.launch.py
edge/ros2_ws/src/safety/heartbeat_monitor/src/: heartbeat_monitor_node.cpp  main.cpp
edge/ros2_ws/src/safety/heartbeat_monitor/test/: test_heartbeat_monitor.cpp
edge/ros2_ws/src/safety/nav2_heartbeat_adapter/: CMakeLists.txt  package.xml
edge/ros2_ws/src/safety/nav2_heartbeat_adapter/include/nav2_heartbeat_adapter/: nav2_heartbeat_adapter_node.hpp
edge/ros2_ws/src/safety/nav2_heartbeat_adapter/launch/: nav2_heartbeat_adapter.launch.py
edge/ros2_ws/src/safety/nav2_heartbeat_adapter/src/: main.cpp  nav2_heartbeat_adapter_node.cpp
edge/ros2_ws/src/safety/safety_bringup/: CMakeLists.txt  package.xml
edge/ros2_ws/src/safety/safety_bringup/launch/: safety_bringup.launch.py
edge/ros2_ws/src/safety/safety_metrics/: CMakeLists.txt  package.xml
edge/ros2_ws/src/safety/safety_metrics/include/safety_metrics/: prometheus_exporter.hpp
edge/ros2_ws/src/safety/safety_msgs/: CMakeLists.txt  package.xml
edge/ros2_ws/src/safety/safety_msgs/msg/: AnomalyEvent.msg
edge/ros2_ws/src/safety/safety_state_machine/: CMakeLists.txt  package.xml
edge/ros2_ws/src/safety/safety_state_machine/include/safety_state_machine/: safety_state_machine_node.hpp
edge/ros2_ws/src/safety/safety_state_machine/launch/: safety_state_machine.launch.py
edge/ros2_ws/src/safety/safety_state_machine/src/: main.cpp  safety_state_machine_node.cpp
edge/ros2_ws/src/safety/safety_state_machine/test/: test_safety_state_machine.cpp
edge/ros2_ws/src/safety/watchdog/: CMakeLists.txt  package.xml
edge/ros2_ws/src/safety/watchdog/include/watchdog/: watchdog_node.hpp
edge/ros2_ws/src/safety/watchdog/launch/: watchdog.launch.py
edge/ros2_ws/src/safety/watchdog/src/: main.cpp  watchdog_node.cpp
edge/ros2_ws/src/safety/watchdog/test/: test_watchdog.cpp
infra/: deploy.sh  destroy.sh  helmfile.yaml
infra/helm-values/: chaos-mesh-values.yaml  kafka-values.yaml  seaweedfs-values.yaml
infra/k3d/: setup.sh  teardown.sh
infra/k8s/kafka/: kafka-cluster.yaml  kafka-topics.yaml
scripts/: create_launch_package.py
testing/diagnostics/: scan_gap_watcher.py
testing/soak_test/: run_soak_test.py
