<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>estop_bridge</name>
  <version>0.1.0</version>
  <description>
    hacobot 分散・リモート安全停止層: Kafkaの robot-control トピックを購読し、
    リモートE-Stopコマンド受信時に /safety/anomaly_event へ severity="CRITICAL" を
    最優先で通知するC++ lifecycle node。旧comm_bridge_heartbeatの通信生存監視機能を統合する。
  </description>
  <maintainer email="noreply@example.com">hacobot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>safety_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>safety_metrics</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
