<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_heartbeat_adapter</name>
  <version>0.1.0</version>
  <description>
    hacobot フェイルセーフ層: Nav2(外部パッケージ)の生存を代表トピックの更新有無から
    間接的に判定し、/safety/heartbeat/nav2 へ変換してpublishするC++アダプターノード
  </description>
  <maintainer email="noreply@example.com">hacobot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>safety_metrics</depend>
  <exec_depend>nav2_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
