<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_metrics</name>
  <version>0.1.0</version>
  <description>
    hacobot フェイルセーフ層の各ノードがPrometheusへメトリクスをexportするための
    ヘッダオンリー共通ライブラリ(prometheus_exporter.hpp)。外部ライブラリ非依存。
  </description>
  <maintainer email="noreply@example.com">hacobot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
