<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>watchdog</name>
  <version>0.1.0</version>
  <description>
    hacobot フェイルセーフ層: カメラ・LiDAR等の実センサートピックの更新間隔を監視し、
    途絶を検知したら /safety/anomaly_event へ severity="CRITICAL" を通知するC++ lifecycle node
  </description>
  <maintainer email="noreply@example.com">hacobot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>safety_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>safety_metrics</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
